[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project2"
version = "1.0.0"
description = "Depends on project1"
requires-python = ">=3.8"
dependencies = ["project1"]

[tool.setuptools]
packages = ["project2"]
package-dir = {"project2" = "."}
